--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,9 +32,9 @@ jobs:
     - name: create ssl files on terraform location
       working-directory: terraform
       run: |  
-        echo ${{ secrets.CERT }} > cert.pem
-        echo ${{ secrets.CHAIN }} > chain.pem
-        echo ${{ secrets.PRIVKEY }} > privkey.pem
+        echo "${{ secrets.CERT }}" > cert.pem
+        echo "${{ secrets.CHAIN }}" > chain.pem
+        echo "${{ secrets.PRIVKEY }}" > privkey.pem
       
     - name: run terraform initialization
       working-directory: terraform
